# mkweb

./: Cargo.toml  README.md
public/: index.html  layout.html  style.css
src/: build.rs  layout.html  main.rs  parser.rs  server.rs
src/templates/: layout.html
